correct bug on mobile, image management
Finally zoom work on Firefox mobile.
Image data (description, author, instructions)  is now stored on an
independant page. Opening large image is now internal to the program (no
link).

--- a/css/aql.css
+++ b/css/aql.css
@@ -71,30 +71,54 @@ body { /* same as bootstrap default, in principle already in normalize.css */
 /*-- Alert box -------------*/
 #aql_alert {
 	display:none; 
-/*	display:block;*/
 	position: fixed; 
 	border-radius: 4px;
+	border: 1px solid #202020;
 	background-color: #f5e0e0;
-	border: 1px solid #d52020;
-	top:100px;
-	left:200px;
+	top:200px;
+	left:120px;
 	min-height:100px;
-	min-width:380px;
+	min-width:400px;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 18px;
 	cursor:pointer;
 	z-index:101; /* above other stuff */
 }
+/*#aql_alert.warning { } */
+#aql_alert.info {	background-color: #C9E9FF;}
+
 #halert {
 	padding: 3px; 
-	background-color: #f5d0d0;
 	font-size: 20px;
 	width:inherit;
-	border-bottom: 2px solid #e02020;
+	border-bottom: 2px solid #202020;
 }
 
 #halertext {
 	padding: 5px; 
+}
+
+#aql_img { /* image window */
+	position:fixed;
+	display:none;
+	margin:0;
+	padding:0;
+	border: 1px solid #202020;
+	z-index:90;
+	background-color: #EFEFEF;
+	cursor:pointer;
+	height:100%;
+	width:100%;
+}
+#aql_img0 { /* image itself */
+	display:block;
+	margin:0;
+	padding:8px;
+}
+#aql_img_b { /* bottom message */
+	margin:0;
+	padding: 0px 8px 3px 12px;
+	cursor:help;
 }
 /* ------ general  -----------------------*/
 #aql_cont {
@@ -209,7 +233,7 @@ buttons with 28px sprites -> 28/48*570=332px, space 33px (=28/48*58)*/
 	background-repeat: no-repeat;   
 	width: 30px;
 	height: 30px; 
-	z-index: 100; /* above buttons */
+	z-index: 10; /* above buttons */
 	position: absolute; /* need the parent container being EXPLICITELY relative */
 	top:-1px; /* imperative */
 	left:0px; 
